--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
       "laravel/framework": "5.1.46",
       "twig/twig": "1.33.*",
       "nesbot/carbon": "1.22.1.0",
-      "wikimedia/composer-merge-plugin": "^1.4"
+      "wikimedia/composer-merge-plugin": "^1.4",
+        "vlucas/phpdotenv": "1.0.0"
     }
 }
