Add newsletter list behavior

--- a/plugins/cifq/routes/plugin.yaml
+++ b/plugins/cifq/routes/plugin.yaml
@@ -4,3 +4,8 @@ plugin:
     author: cifq
     icon: oc-icon-location-arrow
     homepage: ''
+navigation:
+    menu-newsletter:
+        label: 'Contacts'
+        url: cifq/newsletter/newsletter
+        icon: icon-question-circle
