Add subscribed field to newsletter model and migration

--- a/plugins/cifq/newsletter/controllers/newsletter/config_list.yaml
+++ b/plugins/cifq/newsletter/controllers/newsletter/config_list.yaml
@@ -5,6 +5,7 @@
 title: Contacts
 list: $/cifq/newsletter/models/newsletter/columns.yaml
 modelClass: Cifq\Newsletter\Models\Newsletter
+showCheckboxes: true
 toolbar:
     buttons: list_toolbar
     search:
