Add photo attribute

--- a/plugins/cifq/newsletter/models/newsletter/columns.yaml
+++ b/plugins/cifq/newsletter/models/newsletter/columns.yaml
@@ -1,4 +1,8 @@
 columns:
+    picture:
+        label: Photo
+        relation: photo
+        type: image
     firstname:
         label: Prénom
         type: text
