--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ yarn-error.log
 .phpunit.result.cache
 
 storage/
+themes/cifq/assets/src/images/
+themes/cifq/assets/images/
+themes/cifq/assets/node_modules/
