--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-18"
+  },
+  "dependencies": {
+    "swiper": "^4.4.1"
   }
 }
