--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "laravel-elixir": "^6.0.0-18"
   },
   "dependencies": {
-    "swiper": "^4.4.1"
+    "swiper": "^4.4.1",
+    "font-awesome": "^4.7.0"
   }
 }
